시작 화면 graph 클래스로 설정 및 시작 시 로그인 안 했으면 로그인 화면 이동 구현 + 로그아웃 구현

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".graph">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -20,6 +20,7 @@
         <activity android:name=".LogInActivity"/>
         <activity android:name=".signUpActivity"/>
         <activity android:name=".graph"/>
+        <activity android:name=".SnsActivity"/>
     </application>
 
 </manifest>
