--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".graph">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,7 +19,6 @@
         </activity>
         <activity android:name=".LogInActivity"/>
         <activity android:name=".signUpActivity"/>
-        <activity android:name=".graph"/>
         <activity android:name=".SnsActivity"/>
     </application>
 
