비밀번호 재설정 화면으로 이동 구현 로그인에서 회원가입으로 갈 때 에러 있음

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         <activity android:name=".LogInActivity"/>
         <activity android:name=".signUpActivity"/>
         <activity android:name=".SnsActivity"/>
+        <activity android:name=".PasswordReset"/>
     </application>
 
 </manifest>
