회원 정보 입력 구현

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <activity android:name=".signUpActivity"/>
         <activity android:name=".SnsActivity"/>
         <activity android:name=".PasswordReset"/>
+        <activity android:name=".MemberInitActivity"/>
     </application>
 
 </manifest>
