Basic 구현 가로모드금지

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,7 @@
         <activity android:name=".MemberInitActivity"/>
         <activity android:name=".CameraActivity"/>
         <activity android:name=".GalleryActivity"/>
+        <activity android:name=".BasicActivity"/>
     </application>
 
 </manifest>
