--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,7 @@
         <activity android:name=".CameraActivity"/>
         <activity android:name=".GalleryActivity"/>
         <activity android:name=".BasicActivity"/>
+        <activity android:name=".WritePostActivity"/>
     </application>
 
 </manifest>
